--- a/force-app/main/default/lwc/basic/basic.html
+++ b/force-app/main/default/lwc/basic/basic.html
@@ -1,6 +1,6 @@
 <template>
     <!-- <div class="slds-size_3-of-4" style="width: 100%;"> -->
-    <p> testing the components</p>
+    <p> testing the components this is from cicd </p>
         <div class="slds-text-align_center ">
             <lightning-carousel class="custom-carousel">
                 <lightning-carousel-image
